RESOLVED FIXED75879
REGRESSION (r104377): All pages print blank on Snow Leopard
https://bugs.webkit.org/show_bug.cgi?id=75879
Summary REGRESSION (r104377): All pages print blank on Snow Leopard
Sveto
Reported 2012-01-09 11:48:15 PST
Just last week we had bugs 75480 and 75450. Those were fixed relatively easy since it was a typo. This last weekend you have reintroduced the same bug, or at least the same symptoms. The last correctly working build is r104346. That means you have introduced the bug between the 2 builds created on the 7th of January (r104378, r104385). From those two I tested only r104385 and it was broken already. Furthermore I tested the remaining builds after that one up to and including r104450 of today and all of them are broken. One would think once a bug has been established, it won't return that soon. Please refer to the bugs I mentioned above for the details. I kind of dislike going through the same steps of describing the bug again.
Attachments
Fedex label view before printing (152.95 KB, image/jpeg)
2012-01-09 15:54 PST, Sveto
no flags
Broken preview and printing (182.40 KB, image/jpeg)
2012-01-09 15:54 PST, Sveto
no flags
Correct preview and printing (224.39 KB, image/jpeg)
2012-01-09 15:55 PST, Sveto
no flags
Source code of the fedex page with the label before printing (53.77 KB, text/html)
2012-01-09 15:56 PST, Sveto
no flags
Patch v1 (3.70 KB, patch)
2012-01-10 20:32 PST, Mark Rowe (bdash)
mitz: review+
Alexey Proskuryakov
Comment 1 2012-01-09 13:39:39 PST
When filing bugs, please provide steps to reproduce. Making everyone follow a chain of related bugs is less helpful than making each bug self-contained. Is there a way for us to reproduce the problem? Does one need an actual account with FedEx, and make a purchase to reproduce?
Alexey Proskuryakov
Comment 2 2012-01-09 14:01:19 PST
Is the symptom that you are getting a blank preview image? Do web pages in Safari all reload once you try to print a shipping label? That would indicate that WebProcess is crashing.
Alexey Proskuryakov
Comment 3 2012-01-09 15:16:52 PST
We cannot reproduce this problem when printing an actual label purchased on fedex.com.
Sveto
Comment 4 2012-01-09 15:53:02 PST
Anyone that works with Fedex and has an account with them is able to reproduce the problem by printing a shipping label in PDF format. This is the 4th time in the last year and a half that printing of the PDF label in the Webkit nightly gets broken. Usually when you change something in the printing procedures. Last time however was broken due to a typo error in the coding (as explained in bug 75450). I'm attaching images that indicate how the preview in the print box looks the correct way, than how it looks when broken and finally a view of the Fedex label itself before it gets printed. All the images I pulled back from bug 75480 because the manifestation of the new bug here is completely the same. Additionally I attach a brand new copy of the source code of the Fedex page with the label before printing. I don't know what else could I give you to work with. Following is my explanation to the same problem made in bug submission 75480. "As of build r103874 an old printing bug has been reintroduced. When working with Fedex.com a user is able to create the shipping label and print it. After pushing the print button pops the standard printing dialog. Exactly as before, in the small preview box one can see just a plain white space. If I would proceed with printing it will spit an empty page. Also if I select "Print to PDF", the resulting PDF file will be blank. I checked it on all builds since 103874, both on Lion and on Snow Leopard with the latest Safari installed. Attached here are: 1. the source code of the Fedex web page with the label 2. a picture of the page with the label. 3. a picture of the printing dialog from the broken Webkit builds. 4. a picture of the printing dialog from Webkit r103834 which is the last properly working build."
Sveto
Comment 5 2012-01-09 15:54:11 PST
Created attachment 121740 [details] Fedex label view before printing
Sveto
Comment 6 2012-01-09 15:54:53 PST
Created attachment 121741 [details] Broken preview and printing
Sveto
Comment 7 2012-01-09 15:55:31 PST
Created attachment 121742 [details] Correct preview and printing
Sveto
Comment 8 2012-01-09 15:56:20 PST
Created attachment 121743 [details] Source code of the fedex page with the label before printing
Sveto
Comment 9 2012-01-09 16:03:59 PST
If you still need more information, than the person responsible for fixing the bug can contact me through mail. I will give him instructions how to log-in using my account and how to create a label so that he can reproduce the bug successfully. If anyone should contact me for this please use "svetloslav@gmail.com"
Sveto
Comment 10 2012-01-09 16:16:46 PST
Upon further investigation I found out that the problem exists only for Snow Leopard with the latest Safari installed. On Lion also with the latest Safari it works correctly. So between r104378 and r104385 you have changed a printing procedure that errors only on Snow leopard.
Mark Rowe (bdash)
Comment 11 2012-01-09 16:24:57 PST
That's a very useful detail to mention. We'll see if we can reproduce on SnowLeopard.
Alexey Proskuryakov
Comment 12 2012-01-09 17:39:20 PST
I can reproduce on Snow Leopard.
Radar WebKit Bug Importer
Comment 13 2012-01-10 20:14:11 PST
Mark Rowe (bdash)
Comment 14 2012-01-10 20:32:46 PST
Created attachment 121967 [details] Patch v1
Mark Rowe (bdash)
Comment 15 2012-01-10 20:50:35 PST
Fixed in r104663.
Note You need to log in before you can comment on or make changes to this bug.