REGRESSION (r104377): All pages print blank on Snow Leopard <http://webkit.org/b/75879> / <rdar://problem/10674335>

We need to explicitly load PDFKit.framework before using PDFDocument and friends.
On SnowLeopard the framework is not necessarily loaded by anything else before we
print, which would lead to us failing to allocate the PDFDocument that we use for
drawing the content from the web process.

Reviewed by Dan Bernstein.

* UIProcess/API/mac/WKPrintingView.mm:
(pdfKitFrameworkPath): Construct the path to the PDFKit framework.
(classFromPDFKit): Ensure that the PDFKit framework is loaded, and then retrieve the
given class from it.
(pdfAnnotationLinkClass): ASSERT that we found the class.
(pdfDocumentClass): Ditto.

Canonical link: https://commits.webkit.org/92839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104663 268f45cc-cd09-0410-ab3c-d52691b4dbfc